testsuite/tests/properties/invalid_unique/not_array/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    @exported fun test(): Bool = node.unique()
}
